src/test/ui/trait-duplicate-methods.stderr
error[E0428]: the name `orange` is defined multiple times
  --> $DIR/trait-duplicate-methods.rs:13:5
   |
12 |     fn orange(&self);
   |     ----------------- previous definition of the value `orange` here
13 |     fn orange(&self); //~ ERROR the name `orange` is defined multiple times
   |     ^^^^^^^^^^^^^^^^^ `orange` redefined here
   |
   = note: `orange` must be defined only once in the value namespace of this trait

error: aborting due to previous error

